force-app/main/default/objects/Entitlement/fields/B2B_Integration_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Integration_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Integration Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Warranty  Registrations</relationshipLabel>
    <relationshipName>Warranty_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>