force-app/main/default/objects/Entitlement/fields/Is_MAP_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_MAP_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-193 indicates if credit amounts were assigned</description>
    <inlineHelpText>BC-193 indicates if credit amounts were assigned</inlineHelpText>
    <label>Is MAP Assigned</label>
    <type>Checkbox</type>
</CustomField>