force-app/main/default/objects/Entitlement/fields/MAP_Amount__c.field-meta.xml
<CustomField>
    <fullName>MAP_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>BC-193 holds MAP amount that the dealer is entitled to from warranty registration</description>
    <inlineHelpText>BC-193 holds MAP amount that the dealer is entitled to from warranty registration</inlineHelpText>
    <label>MAP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>